# CS50-Web

./: cs50 web.code-workspace  pyproject.toml  settings.py  teste.py
Django/airline/: db.sqlite3
Django/airline/airline/: settings.py  urls.py
Django/airline/flights/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
Django/airline/flights/migrations/: 0001_initial.py  0002_auto_20210325_1945.py  0003_auto_20210325_2140.py  0004_passenger.py  0005_auto_20210326_1930.py
Django/airline/users/: forms.py  urls.py  views.py
Django/lecture3/: db.sqlite3
Django/lecture3/hello/: urls.py  views.py
Django/lecture3/lecture3/: settings.py  urls.py
Django/lecture3/newyear/: urls.py  views.py
Django/lecture3/tasks/: urls.py  views.py
Django/lecture7/: tests1.py
Django/lecture7/airline0/flights/: models.py  tests.py
Django/lecture7/selenium/: counter.html
Testing-CI-CD/: pytest.ini
Testing-CI-CD/airline0/airline/: settings.py
Testing-CI-CD/airline0/flights/: tests.py
Testing-CI-CD/airline1/: Dockerfile  pytest.ini
Testing-CI-CD/airline1/flights/: tests.py
Testing-CI-CD/selenium/: tests.py
User Interfaces/: singlepage.html  singlepage.js  teste.js
User Interfaces/lecture 6/: addition.html  animate0.html  animate1.html  animate2.html  animate3.html  react.html  scroll.html
User Interfaces/my-app/src/: index.jsx
project0/search/: advanced-search.css  advanced-search.css.map  advanced-search.html  advanced-search.scss  images.css  images.css.map  images.html  images.scss  index.css  index.css.map  index.html  index.scss
project1/wiki/encyclopedia/: urls.py  util.py  views.py
project1/wiki/wiki/: settings.py
project2/commerce/: .gitignore  db.sqlite3  insert_cat.py
project2/commerce/auctions/: admin.py  forms.py  models.py  urls.py  utility.py  views.py
project2/commerce/commerce/: settings.py
project2/commerce/scss/: forms.scss  links.scss  listing.scss  main.scss
project3/mail/: .gitignore  db.sqlite3
project3/mail/mail/: admin.py  urls.py  views.py
project3/mail/project3/: settings.py
project4/network/: .eslintrc.json  .gitignore  .prettierrc.json  .watchmanconfig  db.sqlite3  get_url.py  jsconfig.json  model_fields.json  model_fields.py  network.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  sass_watch  teste.js  teste.json
project4/network/frontend/: App.js  index.js  jsconfig.json  main.css
project4/network/network/: admin.py  api_views.py  json_validators.py  models.py  schemas.py  tests.py  urls.py  utility.py  views.py
project4/network/project4/: settings.py  urls.py
project4/network/react_frontend/: index.js
project4/network/scss/: main.scss
(+131 files in other folders)
