[tool.poetry]
name = "cs50 web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.0.1"
whitenoise = "^6.0.0"
pydantic = "^1.9.0"
django-ninja = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
selenium = "^4.1.3"
flake8 = "^4.0.1"
black = "^22.1.0"
pywatchman = { url = "https://test-files.pythonhosted.org/packages/0b/cd/ee5a90c2e3fcf2b6a3433991a395b9a172db8f18ec881dbe457d10e63647/pywatchman-1.4.2.dev1.tar.gz" }
django-browser-reload = "^1.3.0"
djlint = "^1.0.0"

[tool.djlint]
profile = "django"
ignore = "H031,H017,H012"
indent = 2
blank_line_after_tag = "load,extends,include,endblock"
max_line_length = 90
use_gitignore = true
format_attribute_template_tags = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
