[tool.poetry]
name = "cs50 web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.1"
whitenoise = "^6.2.0"
pydantic = "^1.9.1"
django-ninja = "^0.18.0"
orjson = "^3.7.2"
django-debug-toolbar = "^3.4.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
selenium = "^4.2.0"
flake8 = "^4.0.1"
black = "^22.3.0"
django-browser-reload = "^1.6.0"
djlint = "^1.2.0"
poetryup = "^0.8.0"
django-debug-toolbar = "^3.4.0"

[tool.djlint]
profile = "django"
ignore = "H031,H017,H012,D018"
indent = 2
blank_line_after_tag = "load,extends,include,endblock,endif"
max_line_length = 90
use_gitignore = true
format_attribute_template_tags = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
