[tool.poetry]
name = "cs50 web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
whitenoise = "^6.2.0"
django-ninja = "^0.19.0"
orjson = "^3.7.6"
python-magic = "^0.4.27"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
black = "^22.6.0"
django-debug-toolbar = "^3.5.0"
django-browser-reload = "^1.6.0"
flake8 = "^4.0.1"
djlint = "^1.6.0"
django-types = "^0.15.0"
django-extensions = "^3.1.5"
Werkzeug = "^2.1.2"
pygraphviz = "^1.9"

[tool.djlint]
profile = "django"
ignore = "H031,H017,H012,D018"
indent = 2
blank_line_after_tag = "load,extends,include,endblock,endif"
max_line_length = 90
use_gitignore = true
format_attribute_template_tags = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
